fix(style): lower z-index of Link in Recipe to not overlap RatingForm and its Star components

--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -54,7 +54,7 @@
   display: block;
   position: absolute;
   inset: 0;
-  z-index: 2;
+  z-index: 1;
   height: 100%;
   width: 100%;
   background-color: transparent;
